--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,19 @@
+# Github Auth
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
+
+# Google Auth
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+
+# Gemini API Key
+GEMINI_API_KEY=""
+
+# Firebase Config
+NEXT_PUBLIC_FIREBASE_API_KEY=""
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=""
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=""
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=""
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=""
+NEXT_PUBLIC_FIREBASE_APP_ID=""
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=""
