--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prompt-sync": "^4.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-wrap-balancer": "^1.1.1",
     "reflect-metadata": "^0.1.14",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
